[gd_scene load_steps=2 format=3 uid="uid://c1cn804tc8bwk"]

[ext_resource type="Script" uid="uid://biujp7o2u1lhb" path="res://features/roster/team_roster_ui.gd" id="1"]

[node name="TeamRosterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gestion d'Ã‰quipe"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="RosterPanel" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/RosterPanel"]
layout_mode = 2

[node name="RosterList" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/RosterPanel/ScrollContainer"]
layout_mode = 2

[node name="TeamPanel" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/TeamPanel"]
layout_mode = 2

[node name="TeamList" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/TeamPanel/ScrollContainer"]
layout_mode = 2
